<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamzenith.game.zpuzzle.controller.LoginActivity"
    android:background="@drawable/background5">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_weight="0.22"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/zpuzzle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="22dp"
                    android:text="Puzzle"
                    android:textSize="37sp"
                    android:textColor="#161a69"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="30dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"

                        android:textSize="30dp"

                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"

                         />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    >

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="151dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="32dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/buttonanmation"
                        android:gravity="center"
                        android:text="@string/action_sign_in"
                        android:textColor="#f3f4f9"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/email_sign_up_button"

                        android:layout_width="151dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/buttonanmation"
                        android:elevation="0dp"
                        android:gravity="center"
                        android:text="@string/action_sign_up"
                        android:textColor="#f3f4f9"
                        android:textSize="20dp"

                        android:textStyle="bold" />
                </LinearLayout>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="284dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="45dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
