<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.teamzenith.game.zpuzzle.controller.ProfileActivity">
=======
    tools:context="com.teamzenith.game.zpuzzle.controller.ProfileActivity"
    android:background="@drawable/background5">
>>>>>>> Stashed changes

    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <!-- Update progress -->
    <ProgressBar
        android:id="@+id/update_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/profile_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/user_profile_image"
                    android:layout_width="145dp"
                    android:layout_height="152dp"
                    android:layout_gravity="center"
                    android:src="@drawable/avatar_icon" />

                <EditText
                    android:id="@+id/user_name_update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Username" />

                <EditText
                    android:id="@+id/user_email_update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Email" />
                <EditText
                    android:id="@+id/user_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_old_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
                <EditText
                    android:id="@+id/update_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/update_user_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="Update" />

                    <Button
                        android:id="@+id/cancel_user_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Cancel" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
